<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.ToDoAddFragment">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/close"
        android:contentDescription="@string/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Save"
        android:textColor="@color/blue_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_to_do_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_save">

        <EditText
            android:id="@+id/et_to_do"
            android:layout_width="338dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@null"
            android:hint="@string/buy_something"
            android:importantForAutofill="no"
            android:gravity="top"
            android:minHeight="96dp"
            android:inputType="textMultiLine"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/importance"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cd_to_do_card" />

    <Spinner
        android:id="@+id/sp_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_importance"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <View
        android:id="@+id/importance_separator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="16dp"
        android:background="@color/gray_separator"
        app:layout_constraintTop_toBottomOf="@+id/sp_importance" />

    <TextView
        android:id="@+id/tv_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Deadline"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/importance_separator" />

    <TextView
        android:id="@+id/tv_deadline_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/blue_light"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_deadline"
        tools:text="25 июня 2022" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/importance_separator" />

    <View
        android:id="@+id/deadline_separator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="40dp"
        android:background="@color/gray_separator"
        app:layout_constraintTop_toBottomOf="@id/tv_deadline_date"/>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="22dp"
        android:gravity="bottom"
        android:padding="0dp"
        android:text="@string/Delete"
        android:textSize="16sp"
        android:textColor="@color/red_light"
        app:drawableLeftCompat="@drawable/inset_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deadline_separator"
        />

</androidx.constraintlayout.widget.ConstraintLayout>